--- a/WorkingGUI2/GUISample.html
+++ b/WorkingGUI2/GUISample.html
@@ -65,6 +65,18 @@
 					<td>
 						<table id="buttonMenu">
 							<tr>
+								<td id="resetMove" class="controlButton">
+									<p>
+										<button type="button" onClick="resetMove()">Reset Move</button>
+									</p>
+								</td>
+								<td id="makeMove" class="controlButton">
+									<p>
+										<button type="button" onClick="makeMove()">Make Move</button>
+									</p>
+								</td>
+							</tr>
+							<tr>
 								<td id="check" class="controlButton">
 									<p>
 										<button type="button" onClick="callCheck()">Call Check</button>
