Current Version of Game Accounts and Game Setup

--- a/ChessGameAccounts/ChessGameStats.html
+++ b/ChessGameAccounts/ChessGameStats.html
@@ -6,6 +6,15 @@
 <html lang = "en"  xmlns = "http://www.w3.org/1999/xhtml">
 
   <head>
+	<?php
+		session_start();
+		if(empty($_SESSION['username'])){
+			session_destroy();
+			header('Location: ChessGameLogin.html');
+		}
+
+	?>
+
 	<link rel="stylesheet" type="text/css " href="ChessStyleSheet.css">
 	<title>Chess Game Stats</title>
 
