--- a/Old/ChessGameGUI/GUISample.html
+++ b/Old/ChessGameGUI/GUISample.html
@@ -9,9 +9,8 @@
 <body onLoad="setupScreen(this)">
 <script language="javascript" src="GUISample.js"></script>
 <script language="javascript" src="ConstructBoard.js"></script>
-<script language="javascript" src="Highlight2.js"></script>
+<script language="javascript" src="Highlight.js"></script>
 <script language="javascript" src="MakeMove.js"></script>
-<script language="javascript" src="recordBoard.js"></script>
 <table id="header" width="100%" height="20%">
 	<tr id="headerRow" class="header">
 		<td width="15%">
@@ -31,33 +30,33 @@
 		</td>
 	</tr>
 </table>
-<table id="layout" class="layout"><!-- layout square, including game board and control buttons -->
-	<tr id="game">
+<table id="layout" class="layout">	
+	<tr id="game"><!-- begin game stuffs -->
 
 		<td id="boardCell" rowspan="5" class="boardCell">
 			<table id="board" class="board"><!-- chess board -->
 				<script>
-					createBoard("1");<!-- 1 is player 1/white's perspective, 2 is player 2/black's perspective-->
+					createBoard("2");
 				</script>
 			</table>
 		</td>
 		<td>
-			<table id="optionsDisplay" class="optionsDisplay"><!-- taken table and all control buttons -->
+			<table id="optionsDisplay" class="optionsDisplay">
 				<tr>
 					<td>
-						<table id="taken" class="taken"><!-- Contains all pieces removed from play -->
+						<table id="taken" class="taken">
 							<tr id="takenrow1" class="takenTitle">								
 								<p>
 								Taken Pieces
 								</p>
 							</tr>
 							<tr id="takenrow2" width="100%">
-								<td id="takenWhite" class="takenColumn"><!-- White's column -->
+								<td id="takenWhite" class="takenColumn">
 									<p>
 									White
 									</p>
 								</td>
-								<td id="takenBlack" class="takenColumn"><!-- Black's column -->
+								<td id="takenBlack" class="takenColumn">
 									<p>
 									Black
 									</p>
@@ -66,9 +65,9 @@
 						</table>
 					</td>
 				</tr>
-				<tr>
+				<tr class="endGameButtons">
 					<td>
-						<table id="buttonMenu"><!-- Control buttons -->
+						<table id="buttonMenu">
 							<tr>
 								<td id="resetMove" class="controlButton">
 									<p>
