--- a/ChessGameAccounts/ChessGameMatchmaking.html
+++ b/ChessGameAccounts/ChessGameMatchmaking.html
@@ -3,6 +3,7 @@
 <!-- myTemplate.html
      An example XHTML template
      -->
+<!--Author: Cody Dill - GUI-->
 <html lang = "en"  xmlns = "http://www.w3.org/1999/xhtml">
 
   <head>
