--- a/ChessGameAccounts/kyleTest.html
+++ b/ChessGameAccounts/kyleTest.html
@@ -1,3 +1,9 @@
+<!-- 
+//Testing Tool Used to Clear DB Tables
+//Written by: Zachary Swartwood
+//	      Kyle Leber
+//	      Matt Fartel
+-->
 <html>
 <head>
 <?php
