--- a/ChessGameAccounts/ChessGameSignup.html
+++ b/ChessGameAccounts/ChessGameSignup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
+<!--Author: Wesly Charles - GUI-->
+<!--Author: Wes Hulsizer & Kyle Leber -->
 <html lang = "en"  xmlns = "http://www.w3.org/1999/xhtml">
 
   <head>
